# agentic-ablation

./: .env  README.md  __init__.py  analysis.txt  cifar_cnn.py  main.py  makefile  pyproject.toml  solution.json  solution.txt
agents/: __init__.py  analyzer.py  code_generator.py  executor.py  reflector.py  terminator.py
config/: settings.py
models/: __init__.py  schemas.py
prompts/: __init__.py  templates.py
utils/: file_operations.py
workflow/: __init__.py  graph.py
